In machine_learning_template.ipynb, in EDA > Numerical Label section, rename label to target throughout the section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -715,7 +715,7 @@
    "id": "9895c96c-daff-4873-852d-615627e17dcb",
    "metadata": {},
    "source": [
-    "## Numerical Label"
+    "## Numerical Target Variable"
    ]
   },
   {
@@ -733,12 +733,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create histogram  of numerical label\n",
-    "sns.histplot(df[\"numerical_label\"])\n",
+    "# Create histogram of numerical target variable\n",
+    "sns.histplot(df[\"numerical_target\"])\n",
     "\n",
     "# Add title and axes labels \n",
-    "plt.title(\"Distribution of numerical_label\")\n",
-    "plt.xlabel(\"numerical_label\")\n",
+    "plt.title(\"Distribution of numerical_target\")\n",
+    "plt.xlabel(\"numerical_target\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "\n",
     "# Show the plot\n",
@@ -760,9 +760,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Correlations between the numerical label and each numerical and boolean column\n",
+    "# Correlations between the numerical target variable and each numerical and boolean column\n",
     "combined_columns = numerical_columns + boolean_columns\n",
-    "df[combined_columns].corr()[\"numerical_label\"].sort_values(ascending=False)"
+    "df[combined_columns].corr()[\"numerical_target\"].sort_values(ascending=False)"
    ]
   },
   {
@@ -771,7 +771,7 @@
    "metadata": {},
    "source": [
     "### Scatterplots \n",
-    "Scatterplot matrix that shows scatterplots between the numerical label and each numerical column.   \n",
+    "Scatterplot matrix that shows scatterplots between the numerical target variable and each numerical column.   \n",
     "Example code for 9 scatterplots in a 3x3 matrix:"
    ]
   },
@@ -785,21 +785,21 @@
     "# Set the figure size \n",
     "plt.figure(figsize=(12, 12))\n",
     "\n",
-    "# List of numerical columns excluding the label column\n",
-    "numerical_columns_without_label = [col for col in numerical_columns if col != \"numerical_label\"]\n",
+    "# List of numerical columns excluding the target column\n",
+    "numerical_columns_without_target = [col for col in numerical_columns if col != \"numerical_target\"]\n",
     "\n",
     "# Iterate over the numerical columns\n",
-    "for i, numerical_column in enumerate(numerical_columns_without_label):\n",
+    "for i, numerical_column in enumerate(numerical_columns_without_target):\n",
     "    # Create a subplot in a 3x3 grid (current subplot i+1 because subplot indices start at 1)\n",
     "    plt.subplot(3, 3, i + 1)\n",
     "    \n",
-    "    # Create a scatterplot between the current column and the numerical label\n",
-    "    sns.scatterplot(data=df, x=numerical_column, y=\"numerical_label\")\n",
+    "    # Create a scatterplot between the current column and the numerical target\n",
+    "    sns.scatterplot(data=df, x=numerical_column, y=\"numerical_target\")\n",
     "    \n",
     "    # Add title and axis labels \n",
-    "    plt.title(f\"numerical_label by {numerical_column}\")\n",
+    "    plt.title(f\"numerical_target by {numerical_column}\")\n",
     "    plt.xlabel(f\"{numerical_column}\")\n",
-    "    plt.ylabel(\"numerical_label\")\n",
+    "    plt.ylabel(\"numerical_target\")\n",
     "\n",
     "# Adjust layout to prevent overlap\n",
     "plt.tight_layout()\n",
@@ -813,7 +813,7 @@
    "id": "73cdbe81-6e4d-48b4-ae69-07336924ce94",
    "metadata": {},
    "source": [
-    "### Numerical Label by Category"
+    "### Numerical Target Variable by Category"
    ]
   },
   {
@@ -831,9 +831,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Descriptive statistics of numerical label by categorical column\n",
-    "label_by_category = df[\"numerical_label\"].groupby(df[\"categorical_column\"])\n",
-    "label_by_category.describe()"
+    "# Descriptive statistics of numerical target variable by categorical column\n",
+    "target_by_category = df[\"numerical_target\"].groupby(df[\"categorical_column\"])\n",
+    "target_by_category.describe()"
    ]
   },
   {
@@ -851,16 +851,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Store the median of the numerical label by category\n",
-    "median_label_by_category = label_by_category.median()\n",
+    "# Store the median of the numerical target by category\n",
+    "median_target_by_category = target_by_category.median()\n",
     "\n",
     "# Bar plot of median by category\n",
-    "sns.barplot(x=median_label_by_category.index, y=median_label_by_category.values, palette=\"colorblind\")\n",
+    "sns.barplot(x=median_target_by_category.index, y=median_target_by_category.values, palette=\"colorblind\")\n",
     "\n",
     "# Add title and axes labels\n",
-    "plt.title(\"Median numerical_label by categorical_column\")\n",
+    "plt.title(\"Median numerical_target by categorical_column\")\n",
     "plt.xlabel(\"Category\")\n",
-    "plt.ylabel(\"numerical_label\")\n",
+    "plt.ylabel(\"numerical_target\")\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
@@ -871,7 +871,7 @@
    "id": "23ec66e0-2f7f-49c4-847b-f7b696217640",
    "metadata": {},
    "source": [
-    "Bar plot matrix that shows bar plots between the numerical label and each categorical column.  \n",
+    "Bar plot matrix that shows bar plots between the numerical target variable and each categorical column.  \n",
     "Example code for 5 bar plots in a 2x3 matrix:"
    ]
   },
@@ -890,13 +890,13 @@
     "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
     "    plt.subplot(2, 3, i + 1)\n",
     "    \n",
-    "    # Create a bar plot of median numerical_label by the current categorical column\n",
-    "    ax = sns.barplot(data=df, x=categorical_column, y=\"numerical_label\", estimator=np.median, ci=None)\n",
+    "    # Create a bar plot of median numerical_target by the current categorical column\n",
+    "    ax = sns.barplot(data=df, x=categorical_column, y=\"numerical_target\", estimator=np.median, ci=None)\n",
     "    \n",
     "    # Add title and axes labels\n",
-    "    plt.title(f\"Median numerical_label by {categorical_column}\")\n",
+    "    plt.title(f\"Median numerical_target by {categorical_column}\")\n",
     "    plt.xlabel(\"Category\")\n",
-    "    plt.ylabel(\"numerical_label\")\n",
+    "    plt.ylabel(\"numerical_target\")\n",
     "\n",
     "# Adjust layout to prevent overlap\n",
     "plt.tight_layout()\n",
