--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1201,9 +1201,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split the data into X features and y label\n",
-    "X = df.drop(\"label\", axis=1)\n",
-    "y = df[\"label\"]"
+    "# Split the data into X features and y target\n",
+    "X = df.drop(\"target\", axis=1)\n",
+    "y = df[\"target\"]"
    ]
   },
   {
@@ -1217,7 +1217,10 @@
     "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
     "# Split the temporary data into validation and test sets (50% each)\n",
-    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)"
+    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# Delete the temporary data to free up memory\n",
+    "del X_temp, y_temp"
    ]
   },
   {
