In machine_learning_template.ipynb, in Training Baseline Models > Regression Task section, rename label to target throughout the section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1244,8 +1244,8 @@
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
-    "## Regression Task (Numerical Label)  \n",
-    "Train baseline models for a regression problem, where the goal is to predict a numerical label. The five baseline models are:\n",
+    "## Regression Task (Numerical Target)  \n",
+    "Train baseline models for a regression problem, where the goal is to predict a numerical target variable. The five baseline models are:\n",
     "- Linear Regression\n",
     "- Support Vector Regressor\n",
     "- Random Forest Regressor\n",
@@ -1264,7 +1264,7 @@
    "metadata": {},
    "source": [
     "### Helper Function for Residual Plots  \n",
-    "Creates two plots for predicted vs. actual label and residuals vs. actual label to evaluate model performance and identify potential issues in the model assumptions graphically."
+    "Creates two plots for predicted vs. actual target and residuals vs. actual target to evaluate model performance and identify potential issues in the model assumptions graphically."
    ]
   },
   {
@@ -1282,25 +1282,25 @@
     "    # Create a 1x2 grid of subplots\n",
     "    fig, axes = plt.subplots(1, 2, figsize=(12, 5), dpi=150)\n",
     "\n",
-    "    # Plot 1: Predicted vs. Actual Label\n",
+    "    # Plot 1: Predicted vs. Actual Target\n",
     "    axes[0].scatter(y, y_pred)\n",
     "    axes[0].plot([min(y), max(y)], \n",
     "                 [min(y), max(y)], \n",
     "                 color=\"red\", \n",
     "                 linestyle=\"--\", \n",
     "                 label=\"Perfect Prediction\")  # Add diagonal reference line\n",
-    "    axes[0].set_title(\"Predicted vs. Actual Label\")\n",
-    "    axes[0].set_xlabel(\"Actual Label\")\n",
-    "    axes[0].set_ylabel(\"Predicted Label\")\n",
+    "    axes[0].set_title(\"Predicted vs. Actual Target\")\n",
+    "    axes[0].set_xlabel(\"Actual Target\")\n",
+    "    axes[0].set_ylabel(\"Predicted Target\")\n",
     "    axes[0].grid(True)\n",
     "    axes[0].legend() \n",
     "\n",
-    "    # Plot 2: Residuals vs. Actual Label\n",
+    "    # Plot 2: Residuals vs. Actual Target\n",
     "    axes[1].scatter(y, residuals)\n",
     "    axes[1].axhline(y=0, color=\"red\", linestyle=\"--\", label=\"Perfect Prediction\")  # Add horizontal reference line\n",
-    "    axes[1].set_xlabel(\"Actual Label\")\n",
+    "    axes[1].set_xlabel(\"Actual Target\")\n",
     "    axes[1].set_ylabel(\"Residuals\")\n",
-    "    axes[1].set_title(\"Residuals vs. Actual Label\")\n",
+    "    axes[1].set_title(\"Residuals vs. Actual Target\")\n",
     "    axes[1].grid(True)\n",
     "    axes[1].legend() \n",
     "\n",
