In machine_learning_template.ipynb, in Training Baseline Models > Regression Task section, call helper function to create residual plots in regression pipeline

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1372,7 +1372,10 @@
     "    # Add evaluation metrics to their respective lists\n",
     "    rmse_ls.append(rmse)\n",
     "    mape_ls.append(mape)\n",
-    "    r2_ls.append(r2)"
+    "    r2_ls.append(r2)\n",
+    "\n",
+    "    # Create residual plots\n",
+    "    plot_residuals(y_val, y_val_pred)"
    ]
   },
   {
