--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1233,19 +1233,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
+   "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
-    "# Training Baseline Models "
+    "# Regression Task  \n",
+    "For a regression problem, where the goal is to predict a numerical target variable."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
+   "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
    "metadata": {},
    "source": [
-    "## Regression Task (Numerical Target)  \n",
-    "Train baseline models for a regression problem, where the goal is to predict a numerical target variable. The five baseline models are:\n",
+    "## Training Baseline Models  \n",
+    "Train five baseline models:\n",
     "- Linear Regression\n",
     "- Support Vector Regressor\n",
     "- Random Forest Regressor\n",
