--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1384,7 +1384,8 @@
    "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
    "metadata": {},
    "source": [
-    "## Classification Task (Categorical Label)"
+    "# Classification Task  \n",
+    "For a classification problem, where the goal is to predict a categorical target variable."
    ]
   },
   {
