In machine_learning_template.ipynb, in Regression Task section, move helper function for residual plots up and make it a level 2 header

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1242,29 +1242,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
-   "metadata": {},
-   "source": [
-    "## Training Baseline Models  \n",
-    "Train five baseline models:\n",
-    "- Linear Regression\n",
-    "- Support Vector Regressor\n",
-    "- Random Forest Regressor\n",
-    "- Multi-Layer Perceptron Regressor\n",
-    "- XGBoost Regressor\n",
-    "\n",
-    "The model performance will be evaluated using the following metrics:  \n",
-    "- Root Mean Squared Error (RMSE)\n",
-    "- Mean Absolute Percentage Error (MAPE)\n",
-    "- R-squared (R2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bc4a506f-0b4a-4aad-bfac-3e68f65f3dea",
    "metadata": {},
    "source": [
-    "### Helper Function for Residual Plots  \n",
+    "## Helper Function for Residual Plots  \n",
     "Creates two plots for predicted vs. actual target and residuals vs. actual target to evaluate model performance and identify potential issues in the model assumptions graphically."
    ]
   },
@@ -1308,6 +1289,25 @@
     "    # Adjust layout and display the plots\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
+   "metadata": {},
+   "source": [
+    "## Training Baseline Models  \n",
+    "Train five baseline models:\n",
+    "- Linear Regression\n",
+    "- Support Vector Regressor\n",
+    "- Random Forest Regressor\n",
+    "- Multi-Layer Perceptron Regressor\n",
+    "- XGBoost Regressor\n",
+    "\n",
+    "The model performance will be evaluated using the following metrics:  \n",
+    "- Root Mean Squared Error (RMSE)\n",
+    "- Mean Absolute Percentage Error (MAPE)\n",
+    "- R-squared (R2)"
    ]
   },
   {
@@ -1377,6 +1377,14 @@
     "\n",
     "    # Create residual plots\n",
     "    plot_residuals(y_val, y_val_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c4bd7a1-73cd-4c7c-bea6-f0de3b7833d8",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter Tuning"
    ]
   },
   {
