In machine_learning_template.ipynb, in Regression Task section, create separate subsections for training baseline models (individually) and training baseline models (pipeline)

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1296,7 +1296,15 @@
    "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
    "metadata": {},
    "source": [
-    "## Training Baseline Models  \n",
+    "## Training Baseline Models (Individually)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36172487-5eb6-495b-910e-aafdf0365a13",
+   "metadata": {},
+   "source": [
+    "## Training Baseline Models (Pipeline)  \n",
     "Train five baseline models:\n",
     "- Linear Regression\n",
     "- Support Vector Regressor\n",
@@ -1308,14 +1316,6 @@
     "- Root Mean Squared Error (RMSE)\n",
     "- Mean Absolute Percentage Error (MAPE)\n",
     "- R-squared (R2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "36172487-5eb6-495b-910e-aafdf0365a13",
-   "metadata": {},
-   "source": [
-    "### Regression Pipeline"
    ]
   },
   {
