In machine_learning_template.ipynb, in Regression Task > Training Baseline Models (Individually) section, add feature scaling and encoding with a column transformer

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1301,6 +1301,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54633ff2-9a06-496b-923a-dd8f0f5a7ff3",
+   "metadata": {},
+   "source": [
+    "### Feature Scaling and Encoding  \n",
+    "Preprocess the data with a ColumnTransformer: \n",
+    "- Scale numerical columns with StandardScaler (mean=0, std=1)\n",
+    "- Encode categorical columns with OneHotEncoder\n",
+    "- Pass through boolean columns unchanged "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a284ea-8d0c-463e-9c05-fdb054c18082",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize a column transformer \n",
+    "column_transformer = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"scaler\", StandardScaler(), numerical_columns),  # scale numerical columns \n",
+    "        (\"encoder\", OneHotEncoder(drop=None, sparse_output=False), categorical_columns)  # encode categorical columns\n",
+    "    ],\n",
+    "    remainder=\"passthrough\"  # retain boolean columns as-is\n",
+    ")\n",
+    "\n",
+    "# Fit and apply the column transformer to the training data\n",
+    "X_train_transformed = column_transformer.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36172487-5eb6-495b-910e-aafdf0365a13",
    "metadata": {},
    "source": [
