In machine_learning_template.ipynb, in Regression Task > Feature Scaling and Encoding subsection, apply transformations to the validation data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1327,8 +1327,11 @@
     "    remainder=\"passthrough\"  # retain boolean columns as-is\n",
     ")\n",
     "\n",
-    "# Fit and apply the column transformer to the training data\n",
-    "X_train_transformed = column_transformer.fit_transform(X_train)"
+    "# Fit the column transformer to the training data and apply transformations\n",
+    "X_train_transformed = column_transformer.fit_transform(X_train)\n",
+    "\n",
+    "# Apply the same transformations to the validation data\n",
+    "X_val_transformed = column_transformer.transform(X_val)"
    ]
   },
   {
