--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1336,6 +1336,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cb12588e-68c3-4fe3-b858-8ab0fb7b800f",
+   "metadata": {},
+   "source": [
+    "### Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e37e64a3-d589-4f67-9fc3-04d0fc6b78ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "lr = LinearRegression()\n",
+    "\n",
+    "# Train model\n",
+    "lr.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = lr.predict(X_train_transformed)\n",
+    "y_val_pred = lr.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model\n",
+    "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
+    "val_rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "train_mape = mean_absolute_percentage_error(y_train, y_train_pred)\n",
+    "val_mape = mean_absolute_percentage_error(y_val, y_val_pred)\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "val_r2 = r2_score(y_val, y_val_pred)\n",
+    "\n",
+    "# Show evaluation metrics\n",
+    "print(\"Training RMSE:\", train_rmse)\n",
+    "print(\"Validation RMSE:\", val_rmse)\n",
+    "print(\"Training MAPE:\", train_mape)\n",
+    "print(\"Validation MAPE:\", val_mape)\n",
+    "print(\"Training R-squared:\", train_r2)\n",
+    "print(\"Validation R-squared:\", val_r2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36172487-5eb6-495b-910e-aafdf0365a13",
    "metadata": {},
    "source": [
