In machine_learning_template.ipynb, in Regression Task > Linear Regression subsection, use a table to show evaluation metrics

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1367,13 +1367,15 @@
     "train_r2 = r2_score(y_train, y_train_pred)\n",
     "val_r2 = r2_score(y_val, y_val_pred)\n",
     "\n",
+    "# Create table of evaluation metrics\n",
+    "lr_evaluation = pd.DataFrame({\n",
+    "    \"Metric\": [\"RMSE\", \"MAPE\", \"R-squared\"],\n",
+    "    \"Training\": [train_rmse, train_mape, train_r2],\n",
+    "    \"Validation\": [val_rmse, val_mape, val_r2]\n",
+    "})\n",
+    "\n",
     "# Show evaluation metrics\n",
-    "print(\"Training RMSE:\", train_rmse)\n",
-    "print(\"Validation RMSE:\", val_rmse)\n",
-    "print(\"Training MAPE:\", train_mape)\n",
-    "print(\"Validation MAPE:\", val_mape)\n",
-    "print(\"Training R-squared:\", train_r2)\n",
-    "print(\"Validation R-squared:\", val_r2)"
+    "print(lr_evaluation.round(2))  # round metrics to 2 decimals"
    ]
   },
   {
