--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1380,6 +1380,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4da407ee-333e-4bbf-9d83-6696852c8c35",
+   "metadata": {},
+   "source": [
+    "### Support Vector Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15c5ef70-af0b-4cc5-8892-21df67f8ff48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "svr = SVR()\n",
+    "\n",
+    "# Train model\n",
+    "svr.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = svr.predict(X_train_transformed)\n",
+    "y_val_pred = svr.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model\n",
+    "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
+    "val_rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "train_mape = mean_absolute_percentage_error(y_train, y_train_pred)\n",
+    "val_mape = mean_absolute_percentage_error(y_val, y_val_pred)\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "val_r2 = r2_score(y_val, y_val_pred)\n",
+    "\n",
+    "# Create table of evaluation metrics\n",
+    "svr_evaluation = pd.DataFrame({\n",
+    "    \"Metric\": [\"RMSE\", \"MAPE\", \"R-squared\"],\n",
+    "    \"Training\": [train_rmse, train_mape, train_r2],\n",
+    "    \"Validation\": [val_rmse, val_mape, val_r2]\n",
+    "})\n",
+    "\n",
+    "# Show evaluation metrics\n",
+    "print(svr_evaluation.round(2))  # round metrics to 2 decimals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36172487-5eb6-495b-910e-aafdf0365a13",
    "metadata": {},
    "source": [
