In machine_learning_template.ipynb, in Regression Task > Training Baseline Models (Individually) section, add multi-layer perceptron regressor

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1424,6 +1424,94 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5770a103-1db7-4744-b484-44e63c1bf6b3",
+   "metadata": {},
+   "source": [
+    "### Random Forest Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3106850a-59f4-4aad-aecb-1b0097c94381",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "rf = RandomForestRegressor()\n",
+    "\n",
+    "# Train model\n",
+    "rf.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = rf.predict(X_train_transformed)\n",
+    "y_val_pred = rf.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model\n",
+    "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
+    "val_rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "train_mape = mean_absolute_percentage_error(y_train, y_train_pred)\n",
+    "val_mape = mean_absolute_percentage_error(y_val, y_val_pred)\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "val_r2 = r2_score(y_val, y_val_pred)\n",
+    "\n",
+    "# Create table of evaluation metrics\n",
+    "rf_evaluation = pd.DataFrame({\n",
+    "    \"Metric\": [\"RMSE\", \"MAPE\", \"R-squared\"],\n",
+    "    \"Training\": [train_rmse, train_mape, train_r2],\n",
+    "    \"Validation\": [val_rmse, val_mape, val_r2]\n",
+    "})\n",
+    "\n",
+    "# Show evaluation metrics\n",
+    "print(rf_evaluation.round(2))  # round metrics to 2 decimals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dc56c45-c57b-407a-8343-e5217b7d21cf",
+   "metadata": {},
+   "source": [
+    "### Multi-Layer Perceptron Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22a704b2-b16d-4ad6-84f2-5e0014394140",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "mlp = MLPRegressor()\n",
+    "\n",
+    "# Train model\n",
+    "mlp.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = mlp.predict(X_train_transformed)\n",
+    "y_val_pred = mlp.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model\n",
+    "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
+    "val_rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "train_mape = mean_absolute_percentage_error(y_train, y_train_pred)\n",
+    "val_mape = mean_absolute_percentage_error(y_val, y_val_pred)\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "val_r2 = r2_score(y_val, y_val_pred)\n",
+    "\n",
+    "# Create table of evaluation metrics\n",
+    "mlp_evaluation = pd.DataFrame({\n",
+    "    \"Metric\": [\"RMSE\", \"MAPE\", \"R-squared\"],\n",
+    "    \"Training\": [train_rmse, train_mape, train_r2],\n",
+    "    \"Validation\": [val_rmse, val_mape, val_r2]\n",
+    "})\n",
+    "\n",
+    "# Show evaluation metrics\n",
+    "print(mlp_evaluation.round(2))  # round metrics to 2 decimals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36172487-5eb6-495b-910e-aafdf0365a13",
    "metadata": {},
    "source": [
