In machine_learning_template.ipynb, in Regression Task > Training Baseline Models (Individually) section, add XGBoost Regressor

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1512,6 +1512,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e9d9b1d-e7c0-45fb-a908-008c8c706590",
+   "metadata": {},
+   "source": [
+    "### XGBoost Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "992fea17-acb8-4e88-8c1a-ce1d3f37758e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "xgb = XGBRegressor()\n",
+    "\n",
+    "# Train model\n",
+    "xgb.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = xgb.predict(X_train_transformed)\n",
+    "y_val_pred = xgb.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model\n",
+    "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
+    "val_rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "train_mape = mean_absolute_percentage_error(y_train, y_train_pred)\n",
+    "val_mape = mean_absolute_percentage_error(y_val, y_val_pred)\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "val_r2 = r2_score(y_val, y_val_pred)\n",
+    "\n",
+    "# Create table of evaluation metrics\n",
+    "xgb_evaluation = pd.DataFrame({\n",
+    "    \"Metric\": [\"RMSE\", \"MAPE\", \"R-squared\"],\n",
+    "    \"Training\": [train_rmse, train_mape, train_r2],\n",
+    "    \"Validation\": [val_rmse, val_mape, val_r2]\n",
+    "})\n",
+    "\n",
+    "# Show evaluation metrics\n",
+    "print(xgb_evaluation.round(2))  # round metrics to 2 decimals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36172487-5eb6-495b-910e-aafdf0365a13",
    "metadata": {},
    "source": [
