In machine_learning_template.ipynb, move Feature Scaling and Encoding section to right after Train-Validation-Test Split section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1233,6 +1233,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54633ff2-9a06-496b-923a-dd8f0f5a7ff3",
+   "metadata": {},
+   "source": [
+    "# Feature Scaling and Encoding  \n",
+    "Preprocess the data with a ColumnTransformer: \n",
+    "- Scale numerical columns with StandardScaler (mean=0, std=1)\n",
+    "- Encode categorical columns with OneHotEncoder\n",
+    "- Pass through boolean columns unchanged "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a284ea-8d0c-463e-9c05-fdb054c18082",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize a column transformer \n",
+    "column_transformer = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"scaler\", StandardScaler(), numerical_columns),  # scale numerical columns \n",
+    "        (\"encoder\", OneHotEncoder(drop=None, sparse_output=False), categorical_columns)  # encode categorical columns\n",
+    "    ],\n",
+    "    remainder=\"passthrough\"  # retain boolean columns as-is\n",
+    ")\n",
+    "\n",
+    "# Fit the column transformer to the training data and apply transformations\n",
+    "X_train_transformed = column_transformer.fit_transform(X_train)\n",
+    "\n",
+    "# Apply the same transformations to the validation data\n",
+    "X_val_transformed = column_transformer.transform(X_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
@@ -1297,41 +1332,6 @@
    "metadata": {},
    "source": [
     "## Training Baseline Models (Individually)  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54633ff2-9a06-496b-923a-dd8f0f5a7ff3",
-   "metadata": {},
-   "source": [
-    "### Feature Scaling and Encoding  \n",
-    "Preprocess the data with a ColumnTransformer: \n",
-    "- Scale numerical columns with StandardScaler (mean=0, std=1)\n",
-    "- Encode categorical columns with OneHotEncoder\n",
-    "- Pass through boolean columns unchanged "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1a284ea-8d0c-463e-9c05-fdb054c18082",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize a column transformer \n",
-    "column_transformer = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        (\"scaler\", StandardScaler(), numerical_columns),  # scale numerical columns \n",
-    "        (\"encoder\", OneHotEncoder(drop=None, sparse_output=False), categorical_columns)  # encode categorical columns\n",
-    "    ],\n",
-    "    remainder=\"passthrough\"  # retain boolean columns as-is\n",
-    ")\n",
-    "\n",
-    "# Fit the column transformer to the training data and apply transformations\n",
-    "X_train_transformed = column_transformer.fit_transform(X_train)\n",
-    "\n",
-    "# Apply the same transformations to the validation data\n",
-    "X_val_transformed = column_transformer.transform(X_val)"
    ]
   },
   {
