In machine_learning_template.ipynb, restructure the subsection headers for the EDA > Numerical Target Variable section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -747,10 +747,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a539fa8d-ba5c-42e9-bf4c-7e178a87ff1c",
+   "metadata": {},
+   "source": [
+    "### Relationship with Numerical Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6382adcc-1fdb-48b7-8f2a-6d27a559bbfc",
    "metadata": {},
    "source": [
-    "### Correlations"
+    "#### Correlations"
    ]
   },
   {
@@ -770,7 +778,7 @@
    "id": "4a6c0cc0-34f1-4f4c-b8d0-2243ce6f4e4d",
    "metadata": {},
    "source": [
-    "### Scatterplots \n",
+    "#### Scatterplots \n",
     "Scatterplot matrix that shows scatterplots between the numerical target variable and each numerical column.   \n",
     "Example code for 9 scatterplots in a 3x3 matrix:"
    ]
@@ -813,7 +821,7 @@
    "id": "73cdbe81-6e4d-48b4-ae69-07336924ce94",
    "metadata": {},
    "source": [
-    "### Numerical Target Variable by Category"
+    "### Relationship with Categorical Features"
    ]
   },
   {
@@ -821,7 +829,8 @@
    "id": "51c58bee-b56d-4f5c-9b3f-ccf5cd47203c",
    "metadata": {},
    "source": [
-    "Descriptive statistics:"
+    "#### Descriptive Statistics by Category \n",
+    "Descriptive statistics of the numerical target variable by a single categorical column."
    ]
   },
   {
@@ -841,7 +850,8 @@
    "id": "7fd0cd54-3004-408b-a1b6-4874e034fd71",
    "metadata": {},
    "source": [
-    "Bar plot:"
+    "#### Bar Plot  \n",
+    "Bar plot of the median of the numerical target variable by a single categorical column."
    ]
   },
   {
@@ -871,6 +881,7 @@
    "id": "23ec66e0-2f7f-49c4-847b-f7b696217640",
    "metadata": {},
    "source": [
+    "#### Bar Plot Matrix  \n",
     "Bar plot matrix that shows bar plots between the numerical target variable and each categorical column.  \n",
     "Example code for 5 bar plots in a 2x3 matrix:"
    ]
